force-app/main/default/objects/TDSP__c/TDSP__c.object-meta.xml
<CustomObject>
    <description>Transmission and distribution service providers</description>
    <label>Utility</label>
    <nameField>
        <label>Utility Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Utilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>