force-app/main/default/objects/TDSP__c/fields/Allow_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Allow_Enrollment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Enrollment</label>
    <type>Checkbox</type>
</CustomField>