force-app/main/default/objects/TDSP__c/fields/Average_Rate__c.field-meta.xml
<CustomField>
    <fullName>Average_Rate__c</fullName>
    <description>Average rate in cents per kWh for estimation purposes for this TDSP.  This is used only for the usage estimator page.</description>
    <inlineHelpText>Average rate in cents per kWh for estimation purposes for this TDSP.  This is used only for the usage estimator page.</inlineHelpText>
    <label>Average Rate</label>
    <precision>8</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>