force-app/main/default/objects/TDSP__c/fields/Bill_Consolidation_Default__c.field-meta.xml
<CustomField>
    <fullName>Bill_Consolidation_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is bill consolidation the default for this utility / pipeline?</inlineHelpText>
    <label>Bill Consolidation Default</label>
    <type>Checkbox</type>
</CustomField>