force-app/main/default/objects/TDSP__c/fields/CES_Team__c.field-meta.xml
<CustomField>
    <fullName>CES_Team__c</fullName>
    <label>Primary CES Team</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Gulf Coast</fullName>
            </value>
            <value>
                <fullName>Kansas</fullName>
            </value>
            <value>
                <fullName>Midcontinent</fullName>
            </value>
            <value>
                <fullName>Midwest - MN</fullName>
            </value>
            <value>
                <fullName>Midwest - WI</fullName>
            </value>
            <value>
                <fullName>Midwest - IN</fullName>
            </value>
            <value>
                <fullName>North Central - IL</fullName>
            </value>
            <value>
                <fullName>North Central - IN</fullName>
            </value>
            <value>
                <fullName>Rockies</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>