force-app/main/default/objects/TDSP__c/fields/Default_Pricing_Scenario__c.field-meta.xml
<CustomField>
    <fullName>Default_Pricing_Scenario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Most commonly used settings option to be defaulted for contract requests</inlineHelpText>
    <label>Default Pricing Scenario</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Pipeline_Scenario__c.Utility__c</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Pipeline_Scenario__c</referenceTo>
    <relationshipLabel>Utilities</relationshipLabel>
    <relationshipName>Utilities</relationshipName>
    <type>Lookup</type>
</CustomField>