force-app/main/default/objects/TDSP__c/fields/Default_Pricing_Type__c.field-meta.xml
<CustomField>
    <fullName>Default_Pricing_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Most commonly used price type to be defaulted in the contract request</inlineHelpText>
    <label>Default Pricing Type</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND (2 OR 3 OR 4)</booleanFilter>
        <filterItems>
            <field>Rate__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>CES C&amp;I SubProduct</value>
        </filterItems>
        <filterItems>
            <field>Rate__c.All_CES_Locations__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Rate__c.Specific_CES_Location_1__c</field>
            <operation>equals</operation>
            <valueField>$Source.CES_Office__c</valueField>
        </filterItems>
        <filterItems>
            <field>Rate__c.Specific_CES_Location_2__c</field>
            <operation>equals</operation>
            <valueField>$Source.CES_Office__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Rate__c</referenceTo>
    <relationshipLabel>Utilities</relationshipLabel>
    <relationshipName>Utilities</relationshipName>
    <type>Lookup</type>
</CustomField>