force-app/main/default/objects/TDSP__c/fields/Default_Weather_Station_MPLS__c.field-meta.xml
<CustomField>
    <fullName>Default_Weather_Station_MPLS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Weather Station MPLS</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Premises__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Weather Station</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Premises__c</referenceTo>
    <relationshipLabel>Utilities (Default Weather Station MPLS)</relationshipLabel>
    <relationshipName>Utilities2</relationshipName>
    <type>Lookup</type>
</CustomField>