force-app/main/default/objects/TDSP__c/fields/Desired_Rate_Class_Applies__c.field-meta.xml
<CustomField>
    <fullName>Desired_Rate_Class_Applies__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Desired Rate Class Applies</label>
    <type>Checkbox</type>
</CustomField>