force-app/main/default/objects/TDSP__c/fields/DUNS__c.field-meta.xml
<CustomField>
    <fullName>DUNS__c</fullName>
    <description>DUNS number is used to match premises (the ERCOT ESID tables contain these) to the TDSP.  There&#39;s a trigger that runs before premise update/insert</description>
    <externalId>true</externalId>
    <inlineHelpText>DUNS number is used to match premises (the ERCOT ESID tables contain these) to the TDSP.  There&#39;s a trigger that runs before premise update/insert.  These MUST match the number from ERCOT.</inlineHelpText>
    <label>DUNS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>