force-app/main/default/objects/TDSP__c/fields/email_address__c.field-meta.xml
<CustomField>
    <fullName>email_address__c</fullName>
    <label>email address</label>
    <type>Email</type>
</CustomField>