force-app/main/default/objects/TDSP__c/fields/Exists_in_Safari__c.field-meta.xml
<CustomField>
    <fullName>Exists_in_Safari__c</fullName>
    <formula>IF (
  AND(
    ISBLANK( HOU_ID__c ),
    ISBLANK( LIVE_ID__c ),
    ISBLANK( MPLS_ID__c ),
    ISBLANK( STL_ID__c )
  )
  , false
  , true
)</formula>
    <label>Exists in Safari</label>
    <type>Checkbox</type>
</CustomField>