force-app/main/default/objects/TDSP__c/fields/HOU_Commodity_ID__c.field-meta.xml
<CustomField>
    <fullName>HOU_Commodity_ID__c</fullName>
    <label>HOU Commodity ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>