force-app/main/default/objects/TDSP__c/fields/Id_Commodity_Key__c.field-meta.xml
<CustomField>
    <fullName>Id_Commodity_Key__c</fullName>
    <description>Safari UtilityCommodity ID</description>
    <externalId>true</externalId>
    <inlineHelpText>Safari UtilityCommodity ID</inlineHelpText>
    <label>Id Commodity Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>