force-app/main/default/objects/TDSP__c/fields/Id_Key__c.field-meta.xml
<CustomField>
    <fullName>Id_Key__c</fullName>
    <description>Safari Utility ID</description>
    <externalId>true</externalId>
    <inlineHelpText>Safari Utility ID</inlineHelpText>
    <label>Id Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>