force-app/main/default/objects/TDSP__c/fields/Id_Key_Formula__c.field-meta.xml
<CustomField>
    <fullName>Id_Key_Formula__c</fullName>
    <formula>IF( FIND(&#39;-&#39;, Id_Key__c ) = 0
  , NULL
  ,  MID( Id_Key__c , FIND(&#39;-&#39;, Id_Key__c ) + 1, LEN( Id_Key__c ) - FIND(&#39;-&#39;, Id_Key__c ) + 1) 
)</formula>
    <label>Id Key Formula</label>
    <type>Text</type>
</CustomField>