force-app/main/default/objects/TDSP__c/fields/inactive_for_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>inactive_for_Opportunities__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This LDC cannot be selected for opportunities</description>
    <inlineHelpText>This LDC cannot be selected for opportunities</inlineHelpText>
    <label>inactive for Opportunities</label>
    <type>Checkbox</type>
</CustomField>