force-app/main/default/objects/TDSP__c/fields/LDC_Default_Unit__c.field-meta.xml
<CustomField>
    <fullName>LDC_Default_Unit__c</fullName>
    <label>LDC Default Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MMBtu</fullName>
            </value>
            <value>
                <fullName>Therm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>