force-app/main/default/objects/TDSP__c/fields/LIVE_Commodity_ID__c.field-meta.xml
<CustomField>
    <fullName>LIVE_Commodity_ID__c</fullName>
    <label>LIVE Commodity ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>