force-app/main/default/objects/TDSP__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>latitude/longitude for this utility that will be used as its default location for premises without their own geolocation</description>
    <inlineHelpText>latitude/longitude for this utility that will be used as its default location for premises without their own geolocation</inlineHelpText>
    <label>Location for Weather Normalization</label>
    <scale>4</scale>
    <type>Location</type>
</CustomField>