force-app/main/default/objects/TDSP__c/fields/Managed_Storage__c.field-meta.xml
<CustomField>
    <fullName>Managed_Storage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CES can manage storage for customers behind this utility (like Nicor).  Checking this box adds the storage components to the fixed price quote process</description>
    <inlineHelpText>CES can manage storage for customers behind this utility (like Nicor).  Checking this box adds the storage components to the fixed price quote process</inlineHelpText>
    <label>Managed Storage</label>
    <type>Checkbox</type>
</CustomField>