force-app/main/default/objects/TDSP__c/fields/Management_Services_Applies__c.field-meta.xml
<CustomField>
    <fullName>Management_Services_Applies__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Management Services Amendment should be included in TC&#39;s related to this utility</description>
    <inlineHelpText>Management Services Amendment should be included in TC&#39;s related to this utility</inlineHelpText>
    <label>Management Services Applies</label>
    <type>Checkbox</type>
</CustomField>