force-app/main/default/objects/TDSP__c/fields/MDQ_Days_per_Month__c.field-meta.xml
<CustomField>
    <fullName>MDQ_Days_per_Month__c</fullName>
    <description>For a premise&#39;s (or load curve&#39;s) MDQ, how many days per month can you use that capacity</description>
    <inlineHelpText>For a premise&#39;s (or load curve&#39;s) MDQ, how many days per month can you use that capacity</inlineHelpText>
    <label>MDQ Days per Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>