force-app/main/default/objects/TDSP__c/fields/MDQ_Required_for_Firm_Premises__c.field-meta.xml
<CustomField>
    <fullName>MDQ_Required_for_Firm_Premises__c</fullName>
    <formula>OR(
 CES_Office__r.Customer_Number__c = &#39;MPLS&#39;,
 AND(
  CES_Office__r.Customer_Number__c = &#39;HOU&#39;,
  TEXT(CES_Team__c) &lt;&gt; &#39;Rockies&#39; 
 )
)</formula>
    <label>MDQ Required for Firm Premises</label>
    <type>Checkbox</type>
</CustomField>