force-app/main/default/objects/TDSP__c/fields/Meter_Data_Method__c.field-meta.xml
<CustomField>
    <fullName>Meter_Data_Method__c</fullName>
    <description>Determines what the customers will see on the calculation choice page.</description>
    <inlineHelpText>Determines what the customers will see on the calculation choice page.</inlineHelpText>
    <label>Meter Data Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Real-Time Interface</fullName>
            </value>
            <value>
                <fullName>Automated LOA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>