force-app/main/default/objects/TDSP__c/fields/Meter_Phone_Line_Number_Applies__c.field-meta.xml
<CustomField>
    <fullName>Meter_Phone_Line_Number_Applies__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Meter Phone Line Number Applies</label>
    <type>Checkbox</type>
</CustomField>