force-app/main/default/objects/TDSP__c/fields/MPLS_Commodity_ID__c.field-meta.xml
<CustomField>
    <fullName>MPLS_Commodity_ID__c</fullName>
    <label>MPLS Commodity ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>