force-app/main/default/objects/TDSP__c/fields/Outage_phone_number__c.field-meta.xml
<CustomField>
    <fullName>Outage_phone_number__c</fullName>
    <description>What number should customers call to report an outage?</description>
    <inlineHelpText>What number should customers call to report an outage?</inlineHelpText>
    <label>Outage phone number</label>
    <type>Phone</type>
</CustomField>