force-app/main/default/objects/TDSP__c/fields/Phone_Install_Applies__c.field-meta.xml
<CustomField>
    <fullName>Phone_Install_Applies__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Phone Install Applies</label>
    <type>Checkbox</type>
</CustomField>