force-app/main/default/objects/TDSP__c/fields/Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Pipeline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>this utility is actually a pipeline and this is its related pipeline self</description>
    <inlineHelpText>this utility is actually a pipeline and this is its related pipeline self</inlineHelpText>
    <label>Pipeline</label>
    <referenceTo>Pipeline__c</referenceTo>
    <relationshipLabel>Utilities (Pipeline)</relationshipLabel>
    <relationshipName>Utilities2</relationshipName>
    <type>Lookup</type>
</CustomField>