force-app/main/default/objects/TDSP__c/fields/Pipeline_Lookup_1__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Lookup_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pipeline Lookup 1</label>
    <referenceTo>Pipeline__c</referenceTo>
    <relationshipLabel>Utilities</relationshipLabel>
    <relationshipName>Utilities</relationshipName>
    <type>Lookup</type>
</CustomField>