force-app/main/default/objects/TDSP__c/fields/Pipeline_Lookup_2__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Lookup_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pipeline Lookup 2</label>
    <referenceTo>Pipeline__c</referenceTo>
    <relationshipLabel>Utilities (Pipeline Lookup 2)</relationshipLabel>
    <relationshipName>Utilities1</relationshipName>
    <type>Lookup</type>
</CustomField>