force-app/main/default/objects/TDSP__c/fields/Pipeline_Lookup_3__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Lookup_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pipeline Lookup 3</label>
    <referenceTo>Pipeline__c</referenceTo>
    <relationshipLabel>Utilities (Pipeline Lookup 3)</relationshipLabel>
    <relationshipName>Utilities3</relationshipName>
    <type>Lookup</type>
</CustomField>