force-app/main/default/objects/TDSP__c/fields/Pipeline_Required__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Required for Minnesota utilities - used to support curtailment process.</description>
    <label>Pipeline Required</label>
    <type>Checkbox</type>
</CustomField>