force-app/main/default/objects/TDSP__c/fields/Rate_Class_Required__c.field-meta.xml
<CustomField>
    <fullName>Rate_Class_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Rate Class required for pricing options?</inlineHelpText>
    <label>Rate Class Required</label>
    <type>Checkbox</type>
</CustomField>