force-app/main/default/objects/TDSP__c/fields/Seller_Transportation_May_Apply__c.field-meta.xml
<CustomField>
    <fullName>Seller_Transportation_May_Apply__c</fullName>
    <formula>IF(
OR( Utility_Code__c == &#39;CEGT&#39;,
    Utility_Code__c == &#39;Arkla-AR&#39;),
True,
False
)</formula>
    <label>Seller Transportation May Apply</label>
    <type>Checkbox</type>
</CustomField>