force-app/main/default/objects/TDSP__c/fields/Shipper_Cashout_Applies__c.field-meta.xml
<CustomField>
    <fullName>Shipper_Cashout_Applies__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shipper Cashout Applies</label>
    <type>Checkbox</type>
</CustomField>