force-app/main/default/objects/TDSP__c/fields/State_4__c.field-meta.xml
<CustomField>
    <fullName>State_4__c</fullName>
    <label>State 4</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State_List</valueSetName>
    </valueSet>
</CustomField>