force-app/main/default/objects/TDSP__c/fields/STL_Commodity_ID__c.field-meta.xml
<CustomField>
    <fullName>STL_Commodity_ID__c</fullName>
    <label>STL Commodity ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>