force-app/main/default/objects/TDSP__c/fields/STL_ID__c.field-meta.xml
<CustomField>
    <fullName>STL_ID__c</fullName>
    <label>STL ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>