force-app/main/default/objects/TDSP__c/fields/TDSP_API_Name__c.field-meta.xml
<CustomField>
    <fullName>TDSP_API_Name__c</fullName>
    <label>TDSP API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>