force-app/main/default/objects/TDSP__c/fields/Utility_Code__c.field-meta.xml
<CustomField>
    <fullName>Utility_Code__c</fullName>
    <label>Utility Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>