force-app/main/default/objects/TDSP__c/fields/Weather_Normalize_July__c.field-meta.xml
<CustomField>
    <fullName>Weather_Normalize_July__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Weather Normalize July</label>
    <type>Checkbox</type>
</CustomField>