force-app/main/default/objects/TDSP__c/fields/Weather_Normalize_June__c.field-meta.xml
<CustomField>
    <fullName>Weather_Normalize_June__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Weather Normalize June</label>
    <type>Checkbox</type>
</CustomField>