force-app/main/default/objects/TDSP__c/fields/Weather_Normalize_November__c.field-meta.xml
<CustomField>
    <fullName>Weather_Normalize_November__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Weather Normalize November</label>
    <type>Checkbox</type>
</CustomField>