force-app/main/default/objects/TDSP__c/fields/Weather_Normalize_October__c.field-meta.xml
<CustomField>
    <fullName>Weather_Normalize_October__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Weather Normalize October</label>
    <type>Checkbox</type>
</CustomField>