force-app/main/default/objects/TDSP__c/fields/Website_main__c.field-meta.xml
<CustomField>
    <fullName>Website_main__c</fullName>
    <description>the utility&#39;s default website</description>
    <inlineHelpText>the utility&#39;s default website</inlineHelpText>
    <label>Website (main)</label>
    <type>Url</type>
</CustomField>