force-app/main/default/objects/TDSP__c/fields/Website_scheduling__c.field-meta.xml
<CustomField>
    <fullName>Website_scheduling__c</fullName>
    <label>Website (scheduling)</label>
    <type>Url</type>
</CustomField>