force-app/main/default/objects/TDSP__c/fields/Website_tarriff__c.field-meta.xml
<CustomField>
    <fullName>Website_tarriff__c</fullName>
    <label>Website (tarriff)</label>
    <type>Url</type>
</CustomField>