force-app/main/default/objects/TDSP__c/recordTypes/LDC.recordType-meta.xml
<RecordType>
    <fullName>LDC</fullName>
    <active>true</active>
    <description>Natural Gas Utility</description>
    <label>LDC</label>
</RecordType>