force-app/main/default/objects/TDSP__c/recordTypes/TDSP.recordType-meta.xml
<RecordType>
    <fullName>TDSP</fullName>
    <active>true</active>
    <description>Electric Utility</description>
    <label>TDSP</label>
</RecordType>