force-app/main/default/objects/TDSP__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Utility_Code__c</columns>
    <columns>State__c</columns>
    <columns>CES_Office__c</columns>
    <columns>CES_Team__c</columns>
    <columns>LDC_Default_Unit__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>