force-app/main/default/objects/TDSP__c/listViews/Electric_TDSP.listView-meta.xml
<ListView>
    <fullName>Electric_TDSP</fullName>
    <columns>NAME</columns>
    <columns>State__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Website_main__c</columns>
    <columns>Website_tarriff__c</columns>
    <columns>Name_Key__c</columns>
    <columns>DUNS__c</columns>
    <columns>TDSP_API_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>TDSP__c.TDSP</value>
    </filters>
    <label>Electric TDSP</label>
    <language>en_US</language>
</ListView>