force-app/main/default/objects/TDSP__c/listViews/LDC.listView-meta.xml
<ListView>
    <fullName>LDC</fullName>
    <columns>NAME</columns>
    <columns>Utility_Code__c</columns>
    <columns>State__c</columns>
    <columns>CES_Team__c</columns>
    <columns>LDC_Default_Unit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>TDSP__c.LDC</value>
    </filters>
    <label>LDC</label>
</ListView>